--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>HotelV 1.0</title>
+<title>SERVICIO 1.0</title>
 <link href="css/jquery.mobile.theme-1.0.min.css" rel="stylesheet" type="text/css"/>
 <link href="css/jquery.mobile.structure-1.0.min.css" rel="stylesheet" type="text/css"/>
 <script src="phonegap.js"></script>
@@ -19,21 +19,21 @@
 
 <!-- Home -->
 <div data-role="page" id="page1">
-    <div data-theme="a" data-role="header">
+    <div data-theme="e" data-role="header">
         <a data-role="button" href="#Nuevo" class="ui-btn-right">
-            Nuevo
+            AGREGAR
         </a>
         <h3>
-            Lista
+            LISTA
         </h3>
     </div>
     <div data-role="content">
         <div id="Nuevas" data-role="fieldcontain">
             
         </div>
-        <ul data-role="listview" data-divider-theme="a" data-inset="true" >
+        <ul data-role="listview" data-divider-theme="e" data-inset="true" >
             <li data-role="list-divider" role="heading">
-                Completadas
+               DATOS COMPLETOS
             </li>
         </ul>
          <div id="Completadas" data-role="fieldcontain">
@@ -44,32 +44,32 @@
 
 <div data-role="page" id="Nuevo">
 	<div data-role="content">	
-		<ul data-role="listview" data-inset="true" data-dividertheme="a">
-        <li data-role="list-divider" >Nueva Nota</li>
+		<ul data-role="listview" data-inset="true" data-dividertheme="b">
+        <li data-role="list-divider" >NUEVA NOTA</li>
         <li><input type="text" id="regTitulo" placeholder="Titulo"/></li>
         <li style="height:150px"> <textarea name="" id="regDescrip" placeholder="Descripcion" cols="25" rows="25" ></textarea></li>
-        <li><a href="#" id="regFoto">Tomar Foto </a></li>
+        <li><a href="#" id="regFoto">TOMAR FOTO </a></li>
         </ul>		
-        <a href="#" data-role="button" id="regEnviar" data-theme="a">Guardar</a>
+        <a href="#" data-role="button" id="regEnviar" data-theme="a">GUARDAR DATO</a>
 	</div>	
 </div>
 
 <div data-role="page" id="Ver">
 	<div data-role="content">	
-		<ul data-role="listview" data-inset="true" data-dividertheme="a">
-        <li data-role="list-divider" >Ver Nota</li>
+		<ul data-role="listview" data-inset="true" data-dividertheme="b">
+        <li data-role="list-divider" >VER NOTA</li>
         <li><input type="text" id="regTitulo" placeholder="Titulo"/></li>
         <li style="height:150px"> <textarea name="" id="regDescrip" placeholder="Descripcion" cols="25" rows="25" ></textarea></li>
-        <li><a href="#" id="regFoto">Tomar Foto </a></li>
-        </ul>		
-        <a href="#" data-role="button" id="regEnviar" data-theme="a">Aceptar</a>
+        <li><a href="#" id="regFoto">TOMAR FOTO </a></li>
+        </ul>
+		<a href="#" data-role="button" id="regEnviar" data-theme="a">ACEPTAR</a>
 	</div>	
 </div>
 <div data-role="page" id="Revisa">
 	<div data-role="content">	
 		
          <a data-role="button" href="#Nuevo" class="ui-btn-right">
-            Aceptar
+            ACEPTAR
         </a>
         </div>
 	</div>	
